Changes to be committed: 	modified:   .gitignore 	new file:   group_task2/report/acc.png 	new file:   group_task2/report/fine.png 	new file:   group_task2/report/loss.png 	new file:   group_task2/report/report_mid.pdf 	new file:   group_task2/report/report_mid.synctex.gz 	new file:   group_task2/report/report_mid.tex 	modified:   group_task2/task1_finetuning/__pycache__/data_loading_preprocessing.cpython-39.pyc 	modified:   group_task2/task1_finetuning/__pycache__/training_fine_tuning.cpython-39.pyc 	modified:   group_task2/task1_finetuning/data_loading_preprocessing.py 	new file:   group_task2/task1_finetuning/fine_tuning_notes.txt 	deleted:    group_task2/task1_finetuning/main.py 	modified:   group_task2/task1_finetuning/main_notebook.ipynb 	new file:   group_task2/task1_finetuning/model_pretrained_state_dict.pth 	new file:   group_task2/task1_finetuning/model_random_state_dict.pth 	deleted:    group_task2/task1_finetuning/runs/pretrained_model/events.out.tfevents.1715236007.HeDesertFox_pc.9136.0 	deleted:    group_task2/task1_finetuning/runs/random_init_model/events.out.tfevents.1715236007.HeDesertFox_pc.9136.1 	modified:   group_task2/task1_finetuning/training_fine_tuning.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /group_task2/task1_finetuning/CUB_200_2011.tgz
 /group_task2/task1_finetuning/CUB_200_2011
+/group_task2/task1_finetuning/runs
 /group_task2/task1_finetuning/attributes.txt
+/group_task2/task1_finetuning/draft.txt
