modified:   .gitignore 	modified:   final/task1_self_supervised_learning/__pycache__/data_preparation.cpython-39.pyc 	modified:   final/task1_self_supervised_learning/__pycache__/model.cpython-39.pyc 	modified:   final/task1_self_supervised_learning/__pycache__/pretraining.cpython-39.pyc 	modified:   final/task1_self_supervised_learning/__pycache__/training_finetuning.cpython-39.pyc 	modified:   final/task1_self_supervised_learning/data_preparation.py 	new file:   final/task1_self_supervised_learning/logs/moco/events.out.tfevents.1717841807.HeDesertFox_pc.6192.0 	new file:   final/task1_self_supervised_learning/logs/moco/events.out.tfevents.1717852966.HeDesertFox_pc.53228.0 	new file:   final/task1_self_supervised_learning/logs/moco/events.out.tfevents.1717852990.HeDesertFox_pc.53228.1 	new file:   final/task1_self_supervised_learning/logs/moco/events.out.tfevents.1717854025.HeDesertFox_pc.56668.0 	modified:   final/task1_self_supervised_learning/main_notebook.ipynb 	modified:   final/task1_self_supervised_learning/main_test.py 	modified:   final/task1_self_supervised_learning/model.py 	modified:   final/task1_self_supervised_learning/pretraining.py 	modified:   final/task1_self_supervised_learning/training_finetuning.py

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,11 @@
 /mid_term/task1_finetuning/draft.txt
 /mid_term/task2_finetuning/fasterRCNN/epoch_4.pth
 /mid_term/task2_finetuning/yolov3/epoch_6.pth
+
+/final/task1_self_supervised_learning/data
+/final/task1_self_supervised_learning/data/miniimagenet
+/final/task1_self_supervised_learning/data/tiny-imagenet-200
+/final/task1_self_supervised_learning/data/cifar-100-python
+/final/task1_self_supervised_learning/tiny_imagenet_loader.pth
+/final/task1_self_supervised_learning/train_loader_cifar100.pth
+/final/task1_self_supervised_learning/test_loader_cifar100.pth
